# busy-engineers-encryption-sdk

./: .gitignore  MANIFEST.in  NOTICE.txt  README.md  THIRD-PARTY-LICENSES  bootstrap.yaml  buildspec.yml  cloudformation.yaml  deploy.config  deploy.sh  mkdocs.yml  pom.xml  prep-java.sh  prep-python.sh  python-build-remote.sh  python-build.sh  settings.xml  setup.cfg  setup.py  tox.ini
build-tools/: assign_grant.sh  python-build-local.sh  python-build-remote.sh  python-build.sh  revoke_grant.sh
cfn/: busy-engineers-encryption-sdk-iam.yaml
cfn-cloud9/: busy-engineers-encryption-sdk-cloud9.yaml  busy-engineers-encryption-sdk.yaml  reinvent-sid345-cloud9.yaml  reinvent-sid345.yaml
deploy-plugin/: pom.xml
deploy-plugin/src/: assign_grant.sh  revoke_grant.sh
deploy-plugin/src/main/java/sample/: AssignGrantPlugin.java  BasePlugin.java  CFDeploymentPlugin.java  CFDestroyPlugin.java  RevokeGrantPlugin.java
deploy-tools/: bootstrap-lambda.yaml  bootstrap-resource.yaml  deployer.py  resource_handler.py  s3-purge.sh  update-lambda.yaml  update-parameters.yaml  update-resource.yaml
docs/: 0-explore.md  1-kms_encryption.md  2-encryption-sdk.md  3-caching.md  404.rst  cleaning-up.rst  conf.py  debugging-tips.rst  environment-setup.rst  index.md  index.rst  requirements.txt
docs/exercises/: 0-explore.rst  1-explore.rst  1-kms_encryption.rst  2-encryption_sdk.rst  2-kms_encryption.rst  3-caching.rst  3-encryption_sdk.rst  4-caching.rst  5-multi_master_key.rst  5-multi_region.rst
src/: assign_grant.sh  pylintrc  revoke_grant.sh
src/busy_engineers_workshop/: __init__.py  _log_listener.py  encrypt_decrypt.py  handler.py  responses.py
src/reinvent_sid345/: __init__.py  _log_listener.py  encrypt_decrypt.py  handler.py
static-assets/: index.html
test/: requirements.txt
webapp/: pom.xml
webapp-python/: setup.cfg  setup.py  tox.ini
webapp-python/build-tools/: python-build-local.sh  python-build-remote.sh  python-build.sh
webapp-python/src/reinvent_sid345/: encrypt_decrypt.py  handler.py  responses.py
webapp-python/src/reinvent_sid345_lambda/: encrypt_decrypt.py  handler.py  responses.py
webapp/src/: assign_grant.sh  revoke_grant.sh
webapp/src/main/java/example/: AppModule.java  EntryPoint.java  HTTPRequest.java  HTTPResponse.java  Handler.java  KMSRequestCountingLogAppender.java  ResourceDescriptor.java  Utils.java
webapp/src/main/resources/: log4j.properties
(+4 files in other folders)
